--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                 <h1 class="title">Hire Me:</h1>
 
                 <div class="social">
-                    <a href="#">1</a>
-                    <a href="#">2</a>
-                    <a href="#" class="active">3</a>
-                    <a href="#">4</a>
-                    <a href="#">5</a>
+                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                    <a href="#"><i class="fas fa-fire"></i></a>
+                    <a href="#" class="active"><i class="fas fa-crown"></i> </a>
+                    <a href="#"><i class="fab fa-dribbble"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
                 </div>
 
             </div>
@@ -133,11 +133,10 @@
             </div>
             <div class="paginate">
                 <a href="http://">
-                    <span>
-                        < </span>
+                    <span><i class="fas fa-arrow-left"></i></span>
                 </a>
                 <a href="http://" class="active">
-                    <span> > </span>
+                    <span><i class="fas fa-arrow-right"></i></span>
                 </a>
             </div>
         </section>
@@ -217,6 +216,13 @@
                     <div class="description-testimonial">
                         <h1>Michel Clark</h1>
                         <h3>CEO - Designer hunt</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quam dignissimos quaerat
                             consequaturtecto hic!
@@ -231,6 +237,13 @@
                     <div class="description-testimonial">
                         <h1>Johan Marie</h1>
                         <h3>Excutive Direction</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quam dignissimos quaerat
                             consequaturtecto hic!
@@ -241,11 +254,10 @@
 
             <div class="paginate">
                 <a href="http://">
-                    <span>
-                        < </span>
+                    <span><i class="fas fa-arrow-left"></i></span>
                 </a>
                 <a href="http://" class="active">
-                    <span> > </span>
+                    <span><i class="fas fa-arrow-right"></i></span>
                 </a>
             </div>
         </section>
@@ -317,6 +329,7 @@
         </section>
 
         <section class="blogs">
+            
             <h1 class="title">My Blogs</h1>
 
             <div class="blog-section">
@@ -332,11 +345,11 @@
                     </div>
                     <div class="description-blog">
                         <div class="header">
-                            <span>Posted by: Admin</span>
+                            <span><i class="fas fa-user"></i> Posted by: Admin</span>
                             <div>
-                                <span>1.5k</span>
-                                <span>1k</span>
-                                <span>1k</span>
+                                <span><i class="fas fa-thumbs-up"></i> 1.5k</span>
+                                <span><i class="fas fa-comments"></i> 1k</span>
+                                <span><i class="fas fa-share"></i> 1k</span>
                             </div>
                         </div>
                         <h1>Designe is so simple, So that it's too much Complicated</h1>
@@ -344,8 +357,12 @@
                             nulla quo molestiae, possimus illum eius asperiores? Maxime quia ut in temporibus enim
                             incidunt, amet nam.</p>
                         <div class="operations">
-                            <a href="#" class="blog-button">Read More</a>
-                            <a href="#" class="blog-button">Share</a>
+                            <span>
+                                <a href="#" class="blog-button">Read More</a> <i class="fas fa-arrow-right"></i>
+                            </span>
+                            <span>
+                               <i class="fas fa-share"></i> <a href="#" class="blog-button">Share</a>
+                            </span> 
                         </div>
                     </div>
                 </div>
@@ -360,11 +377,11 @@
                     </div>
                     <div class="description-blog">
                         <div class="header">
-                            <span>Posted by: Admin</span>
+                            <span><i class="fas fa-user"></i> Posted by: Admin</span>
                             <div>
-                                <span>1.5k</span>
-                                <span>1k</span>
-                                <span>1k</span>
+                                <span><i class="fas fa-thumbs-up"></i> 1.5k</span>
+                                <span><i class="fas fa-comments"></i> 1k</span>
+                                <span><i class="fas fa-share"></i> 1k</span>
                             </div>
                         </div>
                         <h1>Designe is so simple, So that it's too much Complicated</h1>
@@ -372,8 +389,12 @@
                             nulla quo molestiae, possimus illum eius asperiores? Maxime quia ut in temporibus enim
                             incidunt, amet nam.</p>
                         <div class="operations">
-                            <a href="#" class="blog-button">Read More</a>
-                            <a href="#" class="blog-button">Share</a>
+                            <span>
+                                <a href="#" class="blog-button">Read More</a> <i class="fas fa-arrow-right"></i>
+                            </span>
+                            <span>
+                               <i class="fas fa-share"></i> <a href="#" class="blog-button">Share</a>
+                            </span> 
                         </div>
                     </div>
                 </div>
@@ -388,11 +409,11 @@
                     </div>
                     <div class="description-blog">
                         <div class="header">
-                            <span>Posted by: Admin</span>
+                            <span><i class="fas fa-user"></i> Posted by: Admin</span>
                             <div>
-                                <span>1.5k</span>
-                                <span>1k</span>
-                                <span>1k</span>
+                                <span><i class="fas fa-thumbs-up"></i> 1.5k</span>
+                                <span><i class="fas fa-comments"></i> 1k</span>
+                                <span><i class="fas fa-share"></i> 1k</span>
                             </div>
                         </div>
                         <h1>Designe is so simple, So that it's too much Complicated</h1>
@@ -400,8 +421,12 @@
                             nulla quo molestiae, possimus illum eius asperiores? Maxime quia ut in temporibus enim
                             incidunt, amet nam.</p>
                         <div class="operations">
-                            <a href="#" class="blog-button">Read More</a>
-                            <a href="#" class="blog-button">Share</a>
+                            <span>
+                                <a href="#" class="blog-button">Read More</a> <i class="fas fa-arrow-right"></i>
+                            </span>
+                            <span>
+                               <i class="fas fa-share"></i> <a href="#" class="blog-button">Share</a>
+                            </span> 
                         </div>
                     </div>
                 </div>
@@ -410,6 +435,42 @@
 
             <div class="operation">
                 <a href="#" class="browse">Browse all</a>
+            </div>
+        </section>
+
+        <section class="contact">
+            <div class="contacts">
+                <h1 class="title">Get in Touch</h1>
+                <p><i class="fas fa-map-marker"></i>&nbsp;&nbsp;123, ParkStreet, Avenue, America</p>
+                <p><i class="fas fa-envelope"></i>&nbsp;&nbsp;portflo@gmail.com</p>
+                <p><i class="fas fa-globe"></i>&nbsp;&nbsp;www.portflo.com</p>
+               <br/><br/>
+                <h1 class="title">Follow Me</h1>
+                <div class="social-rodape">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="active"><i class="fab fa-pinterest"></i></a>
+                    <a href="#"><i class="fab fa-behance"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                </div>
+            </div>
+            <div class="forms">
+                <h5>Message Me</h5> 
+                <form action="">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <input type="text" name="name" placeholder="Your Name"/>
+                        </div>
+                        <div class="col-md-6">
+                            <input type="text" name="mail" placeholder="Your E-mail"/>
+                        </div>
+                        <div class="col-md-12">
+                            <textarea name="message" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                            <button class="button">Enviar</button>
+                        </div>
+                    </div>                  
+                    
+                </form>
             </div>
         </section>
     </main>
